--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "2.3.1",
   "description": "A light-weight module that brings window.fetch to node.js",
   "main": "lib/index",
-  "types": "./lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "browser": "./browser.js",
   "module": "lib/index.mjs",
   "files": [
     "lib/index.js",
     "lib/index.mjs",
     "lib/index.es.js",
+    "lib/index.d.ts",
     "browser.js"
   ],
   "engines": {
